# learning_program

./: app.py  chat.py  chatbot_app.py  debug_app.py  demo.py  direct_test.py  graph_test.py  llm_adapter.py  main.py  minimal_test.py  pyproject.toml  sample_pandas.py  sample_plotly.py  simple_north_test.py  sql_guard.py  squadbase.yml  test_api.py  test_api_app.py  test_fixed_search.py  viz.py
.devcontainer/: devcontainer.json  requirements.txt  setup.sh
data/: sample_sales.csv
