[project]
name = "learning-program"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.64.0",
    "duckdb>=1.3.2",
    "matplotlib>=3.10.5",
    "openai>=1.101.0",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "streamlit>=1.47.1",
]
